[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube_topic_modeling"  # Your package name (no spaces/hyphens)
version = "0.1.0"          # Start simple; bump as needed
authors = [{ name = "Long-Jing Hsu", email = "longjinghsu@gmail.com" }]  
description = "This can be used to make topic modeling for transcripts."  # Brief overview
readme = "README.md"       # Links to your README
requires-python = ">=3.8"  # Adjust for your needs
dependencies = [  # Replaces or supplements requirements.txt
    "nltk", "pandas", "numpy<2", "matplotlib", "seaborn", "sklearn", "re", "sys", "bertopic sentence-transformers umap-learn hdbscan", "plotly>=5.18",
]  # List as strings; supports version specs

[tool.setuptools.packages.find]
where = ["src"]            # Points to your code folder