[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube_topic_modeling"
version = "0.1.0"
authors = [
    { name = "Long-Jing Hsu", email = "longjinghsu@gmail.com" }
]
description = "Tools for topic modeling on YouTube transcript data."
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "nltk",
    "pandas",
    "numpy<2",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "bertopic",
    "sentence-transformers",
    "umap-learn",
    "hdbscan",
    "plotly>=5.18"
]  # List as strings; supports version specs

[tool.setuptools.packages.find]
where = ["src"]            # Points to your code folder